--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "isomorphic-unfetch": "^4.0.2",
     "mysql2": "^3.6.0",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "spotify-url-info": "^3.2.6"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
